--- a/styles/landingpage.css
+++ b/styles/landingpage.css
@@ -133,7 +133,13 @@ main{
     position: relative;
     left: 35px;
     rotate: 10deg;
+    transition: all 300ms ease;
 }
+.bee:hover{
+    scale: 1.2;
+    rotate: 20deg;
+}
+
 .headings{
     display: flex;
     flex-direction: column;
@@ -169,4 +175,9 @@ main{
     align-self: center;
     text-align: center;
     margin-top: 20px;
+    transition: all 300ms ease;
+}
+.headings a:hover{
+    scale: 1.2;
+    box-shadow: 0px 20px 20px rgba(0, 0, 0, 0.773);
 }
