--- a/styles/landingpage.css
+++ b/styles/landingpage.css
@@ -1,67 +1,3 @@
-/* * {
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    font-weight: bold;
-}
-body{
-    margin: 0;
-}
-nav + div {
-    justify-content: space-around;
-    text-decoration: none;
-    padding: auto;
-    margin:auto;
-    align-items: center;
-}
-
-.main_picture {
-    transform: scale(0.5,0.5);
-    position: absolute;
-}
-
-.first_one{
-    height: 100vh;
-    background-color: yellow;
-    background-repeat: none;
-    background-position:  cover;
-}
-
-#mainthing{
-align-items: center;
-}
-
-
-.aside{
-    transform: scaleY(4);
-    justify-content: center;
-    align-items:auto;
-    flex-direction: column;
-}
-button{
-    border-radius: 20px;
-    padding: 15px;
-    margin: 15px;
-    background-color: yellow;
-    border-width: 0px;
-
-}
-
-.content{
-    align-items: center;
-    justify-content: center;
-    margin: 200px 200px 200px 200px ;
-    padding:auto;
-}
-
-.mainbar{
-    text-decoration-line: none;
-    padding: auto;
-    justify-content: flex-end;
-    align-items: center;
-    justify-content: space-around;
-    justify-content: space-evenly;
-
-} */
-
 @import url('https://fonts.googleapis.com/css2?family=DM+Serif+Display:ital@0;1&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=ADLaM+Display&family=DM+Serif+Display:ital@0;1&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=ADLaM+Display&family=Averia+Serif+Libre:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&family=DM+Serif+Display:ital@0;1&display=swap');
@@ -77,17 +13,16 @@ body{
     height: 100vh;
     display: grid;
     grid-template-columns: 400px 1fr;
-    grid-template-rows: 60px 1fr;
-    grid-template-areas: 
-        "side header"
-        "side section"
+    display: flex;
         ;
 
 }
 
 header{
     display: flex;
-    grid-area: header;
+    width: 100%;
+    height: max-content;
+    flex-direction: column;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 .links{
@@ -101,7 +36,24 @@ header{
 }
 .links li a{
     text-decoration: none;
+    position: relative;
+    font-size: 1.2rem;
     color: #FFB238;
+    transition: all 200ms ease-in;
+    scale: 1.1;
+}
+.links li a::after{
+    content: '';
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    height: 3px;
+    width: 0%;
+    background-color: #FFB238;
+    transition: all 200ms ease-in;
+}
+.links li a:hover::after{
+    width: 100%;
 }
 nav{
     display: flex;
@@ -126,9 +78,6 @@ nav{
     margin: 0;
     font-family: "ADLaM Display", serif;
 }
-main{
-    grid-area: main;
-}
 .bee{
     position: relative;
     left: 35px;
@@ -142,8 +91,12 @@ main{
 
 .headings{
     display: flex;
+    width: 100%;
     flex-direction: column;
-    grid-area:section ;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+
 }
 .headings h1{
     font-size: 5rem;
