--- a/styles/landingpage.css
+++ b/styles/landingpage.css
@@ -6,12 +6,14 @@
 body{
     margin: 0;
     padding: 0;
+    overflow: hidden;
+    overflow-y: scroll;scroll-snap-type: mandatory;
 }
 
 .first-view{
-    width:100%;
-    height: 100vh;
     display: flex;
+    height: 100vh;
+    scroll-snap-align: start;
 }
 
 header{
@@ -57,12 +59,10 @@ nav{
     justify-content: center;
     margin-top: 0;
     padding: 10px;
-    width: 100%;
 }   
-.side-box{
-    grid-area: side;
+.side-div{
     background-color: #FFB238;
-    height: 100vh;
+    height: 100%;
 }
 .logo{
     display:flex;
@@ -129,4 +129,86 @@ nav{
 .headings a:hover{
     scale: 1.2;
     box-shadow: 0px 20px 20px rgba(0, 0, 0, 0.773);
+}
+.hero-image{
+    position: absolute;
+    bottom: 0;
+    border-radius: 20px;
+}
+.products{
+    scroll-snap-align: start;
+    margin-top: 0;
+    display: flex;
+    height: 100vh;
+    width: 100%;
+    overflow: hidden;
+    align-items: center;
+}
+.side-div-pd{
+    background-color: #FFB238;
+    width: 438px;
+    display: flex;
+    position: absolute;
+    height: 100vh;
+    align-items: center;
+    justify-content: center;
+}
+.side-div-pd h2{
+    margin: 0;
+    font-family: poppins;
+    font-size: 2rem;
+
+}
+.slide-show ul{
+    display: flex;
+    overflow: hidden;
+    height: fit-content;
+    width: 100%;
+    justify-content: space-between;
+}
+.slide-show ul li{
+    list-style-type: none;
+    position: absolute;
+    z-index: -1;
+    left: 100%;
+    animation: autoScroll 15s linear 1;
+}
+.slide-show img{
+    width: 350px;
+    height: 300px;
+    border-radius: 15px;
+}
+.slide-show{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+}
+
+.slide-show ul li:nth-child(1){
+    animation-delay: 8s;
+}
+.slide-show ul li:nth-child(2){
+    animation-delay:16s;
+}
+.slide-show ul li:nth-child(3){
+    animation-delay: 24s;
+}
+.slide-show ul li:nth-child(4){
+    animation-delay: 32s;
+}
+.slide-show ul li:nth-child(5){
+    animation-delay: 40s;
+}
+.slide-show ul li:nth-child(6){
+    animation-delay: 48s;
+}
+.slide-show ul li:nth-child(7){
+    animation-delay: 49s;
+}
+
+
+@keyframes autoScroll {
+    to{
+        left: 0%;
+    }
 }
